# usth-os-course

./: .gitignore  A.cpp  CMakeLists.txt  EX2.cpp  EX3.cpp  LinkedQueue.ts  gendoc.cpp  main.cpp  mockScheduler.ts  package-lock.json  package.json  print.cpp  tsconfig.json
CPP/S01/: CMakeLists.txt  EX1.cpp  test.c
CPP/S02/: CMakeLists.txt  EX1.cpp  EX2.cpp  EX3.cpp  EX4.cpp  EX5.cpp  EX6.cpp  Semaphore.cpp  Semaphore.h  Thread.cpp  Thread.h  readcmd.c  readcmd.h  shell-template.c  shell.cpp  sujet_proc.odt  sync.cpp  test  tst.c
CPP/S03/: CMakeLists.txt  EX1.cpp  mem.cpp
Java/src/: Main.java
S01/: B.cpp  CMakeLists.txt  EX2.cpp  main.cpp  test2.cpp
