cmake_minimum_required(VERSION 3.7.2)
project(USTH_OSCourse)

set(CMAKE_CXX_STANDARD 98)

add_executable(USTH_OSCourse main.cpp)
add_executable(gendoc gendoc.cpp)
add_executable(print print.cpp)
add_executable(EX1 EX1.cpp)
add_executable(A A.cpp)
add_executable(B B.cpp)
add_executable(EX2 EX2.cpp)
add_executable(EX3 EX3.cpp)